# pantheon-session

./: README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
session/: meson.build  pantheon.session
xsessions/: pantheon.desktop
xsessions-non-gnome/: meson.build  pantheon-non-gnome.desktop  session-manager.py  startpantheon
